# Inflatiometer

./: .clang-format  .gitignore  .gitmodules  Description.txt  ReadMe.md  TODO.txt
.cache/clangd/index/: Constants.h.851C5B3656C79A55.idx  Controller.c.91A72006F1A0A46F.idx  Controller.cpp.7B794C07CE8C86FC.idx  DataHandler.c.3F6F14F54B8B316C.idx  DataHandler.cpp.AE324F6CD197F549.idx  IniParser.c.A8370540106D4CE1.idx  IniParser.h.1FB166B3C5D7D3A9.idx  IniParser.h.9D84373C3FA53778.idx  Logger.c.94841CAFFEB330E2.idx  Logger.h.7A2A9CEF5F604F9E.idx  Server.c.FD8533022A052AAF.idx  Server.cpp.D49E5325E62C30C9.idx  Settings.h.87D9CA6B3FB3CEE4.idx  Types.h.E7DCAE18CF99F9CA.idx  ini.c.CCA646A87E3CBB94.idx  ini.h.429297A4C5C98324.idx
Configs/: CController.ini  CDataHandler.ini  CDatabaseManager.ini  Common.ini
Resources/: Data.json  DatabaseDescription.json
Source/: CMakeLists.txt  Defines.h  ErrorCodes.json
Source/C/: Constants.h  Types.h
Source/C/Common/: CMakeLists.txt  Settings.h
Source/C/Common/Functions/: CMakeLists.txt  Functions.h
Source/C/Common/Functions/Impl/: Functions.c
Source/C/Common/IniParser/: CMakeLists.txt  IniParser.h
Source/C/Common/IniParser/Impl/: IniParser.c
Source/C/Common/Logger/: CMakeLists.txt  Logger.h
Source/C/Common/Logger/Impl/: IniParser.c  IniParser.h  Logger.c
Source/C/Controller/: CMakeLists.txt  Controller.c
Source/C/Controller/Impl/: Database.c  Database.h  DoProcess.c  DoProcess.h  IniParser.c  IniParser.h
Source/C/DataHandler/: CMakeLists.txt  DataHandler.c
Source/C/DatabaseManager/: CMakeLists.txt  DataBaseManager.c  DatabaseManager.c
Source/C/DatabaseManager/Impl/: Manager.c  Manager.h  TreeManager.c  TreeManager.h
Source/C/DatabaseManager/Impl/ContentDescription/: NodesWalker.h
Source/C/DatabaseManager/Impl/ContentDescription/Json/: NodesWalker.c
Source/C/DatabaseManager/Impl/Postgres/: Commands.c  Commands.h  Connector.c  Connector.h  PostgresDB.c  PostgresDB.h
Source/C/Server/: CMakeLists.txt
Source/CMake/: CompileFlags.cmake  PostCopy.cmake  PostCopyResources.cmake.in  Settings.cmake
Source/Cpp/Controller/: CMakeLists.txt
Source/Cpp/DataHandler/: CMakeLists.txt
Source/Cpp/Server/: CMakeLists.txt
Source/Python/: DbStructureManager.py
Source/Python/Parsers/: Magnit.py
Source/Python/Parsers/Magnit/: Parser.py
